--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!--Maven version and headers-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <!--here is the options we set in JAV-->
   <groupId>com.javaweb</groupId>
   <artifactId>JavaWeb_maven</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <!--package file format : .war
+  .jar for java app
+  .war for java web app
+  -->
   <packaging>war</packaging>
 
   <name>JavaWeb_maven Maven Webapp</name>
@@ -20,12 +25,20 @@
   </properties>
 
   <dependencies>
+
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
