--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>servlet-01</module>
     <module>servlet-02</module>
+      <module>servlet_response</module>
   </modules>
   <!--package file format : .war
   .jar for java app
