--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>servlet-01</module>
     <module>servlet-02</module>
       <module>servlet_response</module>
+      <module>servlet_request</module>
   </modules>
   <!--package file format : .war
   .jar for java app
